# ChangeLog for xfce-base/thunar
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/thunar/ChangeLog,v 1.4 2006/12/06 00:56:34 nichoj Exp $

  10 Dec 2006; Joshua Nichols <nichoj@gentoo.org> thunar-0.5.0_rc2.ebuild:
  Fixed SRC_URI.

*thunar-0.5.0_rc2 (07 Dec 2006)

  07 Dec 2006; Joshua Nichols <nichoj@gentoo.org> +thunar-0.5.0_rc2.ebuild:
  Version bump for RC2. See bug #146563.

*thunar-0.3.2_beta2 (10 Jul 2006)

  10 Jul 2006; Brad Cowan <bcowan@gentoo.org> +thunar-0.3.2_beta2.ebuild:
  Xfce beta 2 builds.

*thunar-0.3.0_beta1 (20 Apr 2006)

  20 Apr 2006; Daniel Ostrow <dostrow@gentoo.org> +metadata.xml,
  +thunar-0.3.0_beta1.ebuild:
  Version bump for 4.4_beta1.
