@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/thunar/thunar-0.5.0_rc2.ebuild,v 1.2 2006/12/06 00:56:34 nichoj Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/thunar/thunar-0.5.0_rc2.ebuild,v 1.3 2006/12/06 05:44:19 nichoj Exp $
 
 inherit xfce44 versionator
 
@@ -24,9 +24,13 @@ RDEPEND="virtual/fam
 	gnome-base/orbit
 	>=media-libs/jpeg-6b
 	>=media-libs/libpng-1.2
-	dbus? ( >=sys-apps/dbus-0.34 )
+	dbus? ( || 	( >=dev-libs/dbus-glib-0.71
+				( <sys-apps/dbus-0.90 >=sys-apps/dbus-0.34 ) )
+	)
 	hal? ( >=sys-apps/hal-0.5
-		>=sys-apps/dbus-0.34 )
+		||	( >=dev-libs/dbus-glib-0.71
+			( <sys-apps/dbus-0.90 >=sys-apps/dbus-0.34 ) )
+	)
 	x11-libs/pango
 	startup-notification? ( >=x11-libs/startup-notification-0.4 )
 	xslt? ( dev-libs/libxslt )
