@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/thunar
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/thunar/ChangeLog,v 1.4 2006/12/06 00:56:34 nichoj Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/thunar/ChangeLog,v 1.5 2006/12/06 05:44:19 nichoj Exp $
+
+  11 Dec 2006; Joshua Nichols <nichoj@gentoo.org> thunar-0.3.0_beta1.ebuild,
+  thunar-0.3.2_beta2.ebuild, thunar-0.5.0_rc2.ebuild:
+  Updated dependencies for modular dbus, see bug #154521.
 
   10 Dec 2006; Joshua Nichols <nichoj@gentoo.org> thunar-0.5.0_rc2.ebuild:
   Fixed SRC_URI.
